--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/rubocop"]
 	path = bundle/rubocop
 	url = https://github.com/ngmy/vim-rubocop.git
+[submodule "bundle/supertab"]
+	path = bundle/supertab
+	url = git://github.com/vim-scripts/supertab.git
